--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -190,7 +190,6 @@ jobs:
           set -x
           cd ${{ inputs.rundir }}
           echo "$(date) Submitting SLURM Job"
-          cat run.sh
           jobid=$(qsub run.sh)
           jobid=$(echo "$jobid" | cut -d'.' -f1)
           if [ -z "${jobid}" ]; then
@@ -552,7 +551,7 @@ jobs:
             default: |
               #!/bin/bash
               #PBS -q HIE
-              #PBS -l select=1:ncpus=128:mpiprocs=1:ngpus=1
+              #PBS -l select=1:ncpus=92s:mpiprocs=1:ngpus=1
               #PBS -l walltime=01:00:00
               #PBS -V
       advanced_settings:
