--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -26,6 +26,8 @@ export DOCS_DIR=./docs
 export VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
 export VLLM_EXTRA_ARGS="__VLLM_EXTRA_ARGS__"
 export TRITON_CC=gcc
+export CC=/usr/bin/gcc
+export CXX=/usr/bin/g++
 
 
 # Other VLLM tuning settings
