--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -32,11 +32,7 @@ export CXX=/usr/bin/g++
 export TMPDIR=${PWD}/tmp
 export CUDA_CACHE_PATH=${TMPDIR}/cuda_cache
 export TORCH_EXTENSIONS_DIR=${TMPDIR}/torch_extensions
-export FLASHINFER_JIT_DIR=${TMPDIR}/flashinfer_jit
-
-mkdir -p ${CUDA_CACHE_PATH} ${TORCH_EXTENSIONS_DIR} ${FLASHINFER_JIT_DIR}
-chmod -R 777 ${TMPDIR}
-
+export FLASHINFER_JIT_DIR=${TMPDIR}/flashinfer_jitß
 
 # Other VLLM tuning settings
 export VLLM_LOGGING_LEVEL=INFO
