--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       HF_TOKEN: ${HF_TOKEN}
       HF_HOME: /root/.cache/huggingface
       VLLM_API_KEY: ${VLLM_API_KEY}
+      CUDA_DEVICE_ORDER: PCI_BUS_ID
     volumes:
       - ./cache:/root/.cache
     command: >
